Fix button styling
Buttons were too big, text wasn't vertically centered.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,10 +39,10 @@ $bwhite: #FFF;
 	    }
             background-color: $blight;
             color: $bwhite;
-            width: 230px;
-            padding: 20px 0px;
+            width: 160px;
+            padding: 20px 0px 5px;
             font-weight: 500;
-            font-size: 1.6em;
+            font-size: 1.4em;
             border: none;
             border-bottom: 10px solid $bdark;
         }
